[package]
name = "blog-rs"
version = "0.1.0"
authors = ["zhangmingming <zhangmingming@doweidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
serde = "1.0.114"
failure = "0.1.8"